# Nori-Lab

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  DEV_RUN.md  NORI_PLAN.md  PROJECTS_DESIGN.md  README.md  agent_sound_clips_plan.md  full_nori_plan.md  m0_m2_implementation_plan.md  m3_m5_implementation_plan.md  onboard_pi_plan.md  pyproject.toml  todos.md
app/: dataset_browser.py  hf_auth.py  jobs.py  main.py  replaying.py  training.py
cloud_inference/: FINETUNE_PLAN.md  INFERENCE_ENDPOINT_PLAN.md  README.md  STREAM_INTEGRATION_PLAN.md  derive_calibration.py  dryrun_cloud.py  extract_convention.py  keep_warm.sh  molmoact2_server.py  requirements.txt  rtc.py
desktop/: BUILD_AND_SIGNING.md  BUILD_WINDOWS.md  HANDOFF.md  NOTARIZE.md  README.md  backend_entry.py  build.sh  env.public.example  lelab_desktop.spec  rebuild_all.sh  sign_backend.sh
desktop/tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
desktop/tauri/capabilities/: default.json
desktop/tauri/icons/: icon.icns
desktop/tauri/src/: main.rs
docs/: README.md  index.md  licenses.md  package-lock.json  package.json  vercel.json
frontend/: .env.example  .gitignore  DEPLOY_FRONTEND.md  index.html  mock-smoke.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
lelab/: browser_capture.py  calibrate.py  capture_export.py  dataset_episodes.py  datasets.py  jobs.py  local_auth.py  nori_cam_zmq.py  nori_client.py  nori_cloud_rollout.py  nori_leader_setup.py  nori_rollout.py  nori_units.py  train.py  (+8 more)
(+250 files in other folders)
