[package]
name = "lelab-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Lets the UI hand a URL to the OS so it opens in the user's real browser. Needed because
# this app IS a webview: an in-page link to the hosted docs would navigate the app away from
# itself with no way back. Scoped to https:// only — see capabilities/default.json.
tauri-plugin-opener = "2"

[[bin]]
name = "lelab-desktop"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = true
strip = true
